k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  namespace: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: almuko/back:latest   # 👈 твой Docker Hub репозиторий/образ
          imagePullPolicy: Always
          ports:
            - containerPort: 9004
          readinessProbe:
            httpGet:
              path: /ping
              port: 9004
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 9004
            initialDelaySeconds: 10
            periodSeconds: 10
