k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: back
spec:
  selector:
    app: back
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9004
